3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Implement feature request #1653768: Pants/legs
 common/item.c
 include/object.h
Nicolas Weeger 2007-05-24

server/time.c: allow plugins to override the usual move process.
Nicolas Weeger 2007-05-24

Add party rejoin at login. New command 'party_rejoin' to control the behaviour.
 include/player.h sproto.h
 server/c_party.c commands.c login.c player.c
 lib/help/party_rejoin
 lib/Makefile.am
Nicolas Weeger 2007-05-21

Misc memory fixes. Remove obsolete "inventory" line.
 common/image.c links.c loader.l player.c re-cmp.c shstr.c treasure.c
Nicolas Weeger 2007-05-20

Document save_object(s) and save_map() options, add enum for doc linking.
 common/loader.l map.c
 crossedit/Edit.c
 include/map.h
 random_maps/standalone.c
 server/c_wiz.c server.c swap.c weather.c
Nicolas Weeger 2007-05-20

Fix bug #1713140: sustenance overflow.
include/player.h: change digestion from sint8 to sint16. Change other fields
 the same to avoid potential overflows.
Nicolas Weeger 2007-05-20

server/disease.c: Add check to make sure symptom was not destroyed
  when victim dies - otherwise we get double remove/free.
MSW 2007-05-19

Static buffer removal, remove unused parameters, use safe string functions.
 random_maps/decor.c door.c exit.c expand2x.c floor.c monster.c random_map.c
  rproto.h style.c treasure.c wall.c
 server/server.c
Nicolas Weeger 2007-05-18

 server/weather.c: remove static buffer.
Nicolas Weeger 2007-05-17

server/server.c: player count tracking will get false if moving from a map to the same.
Nicolas Weeger 2007-05-17

Remove obsolete funcpoint.h file.
 include/funcpoint.h: removed
 include/global.h Makefile.am
 crossedit/xutil.c